--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,18 @@
 
 @import "~admin-lte/plugins/fontawesome-free/css/all.css";
 @import "~admin-lte/dist/css/adminlte.css";
+
+@import "~admin-lte/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css";
+@import "~admin-lte/plugins/datatables-responsive/css/responsive.bootstrap4.min.css";
+@import "~admin-lte/plugins/datatables-buttons/css/buttons.bootstrap4.min.css";
+
+.login-box{
+    transform: translateY(-100px);
+    min-width: 700px;
+}
+
+.ellipsis{
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
